--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "chalk": "^5.3.0"
-  }
+  },
+  "devDependencies": {}
 }
