--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "axios": "^1.7.4",
     "chalk": "^5.3.0"
-  },
-  "devDependencies": {}
+  }
 }
