--- a/package.json
+++ b/package.json
@@ -14,13 +14,7 @@
     "chalk": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.25.4",
-    "babel-jest": "^29.7.0",
+    "chai": "^5.1.1",
     "jest": "^29.7.0"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.mjs$": "babel-jest"
-    }
   }
 }
